Added: implemented payment gateway system

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.12.1",
     "nodemon": "^3.1.9",
     "openai": "^4.90.0",
-    "puppeteer": "^24.4.0"
+    "puppeteer": "^24.4.0",
+    "sslcommerz-lts": "^1.1.0"
   }
 }
