--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^3.1.9",
     "openai": "^4.90.0",
     "puppeteer": "^24.4.0",
+    "sslcommerz": "^1.7.0",
     "sslcommerz-lts": "^1.1.0"
   }
 }
